[gd_scene load_steps=4 format=3 uid="uid://de0rma64utw70"]

[ext_resource type="Script" path="res://scripts/menues/loginMenu.gd" id="1_35xpr"]
[ext_resource type="Texture2D" uid="uid://d0vujtxwainsh" path="res://media/images/loading-ring.png" id="2_0hfqf"]

[sub_resource type="Theme" id="Theme_a0r42"]

[node name="LoginMenu" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_a0r42")
script = ExtResource("1_35xpr")

[node name="btn_cancel" type="Button" parent="."]
layout_mode = 0
offset_left = 757.0
offset_top = 591.0
offset_right = 1076.0
offset_bottom = 667.0
text = "Iniciar Sesion
"

[node name="btn_login" type="Button" parent="."]
layout_mode = 0
offset_left = 755.0
offset_top = 498.0
offset_right = 1077.0
offset_bottom = 574.0
text = "Iniciar Sesion
"

[node name="user_input" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="txt_user" type="TextEdit" parent="user_input"]
layout_mode = 0
offset_left = 748.0
offset_top = 202.0
offset_right = 1074.0
offset_bottom = 245.0
placeholder_text = "Ingrese usuario"

[node name="lbl_user" type="Label" parent="user_input"]
layout_mode = 0
offset_left = 753.0
offset_top = 155.0
offset_right = 865.0
offset_bottom = 190.0
text = "Usuario"

[node name="lbl_user_error" type="Label" parent="user_input/lbl_user"]
layout_mode = 0
offset_left = -13.0
offset_top = 100.0
offset_right = 305.0
offset_bottom = 123.0

[node name="password_input" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="txt_password" type="TextEdit" parent="password_input"]
layout_mode = 0
offset_left = 752.0
offset_top = 345.0
offset_right = 1077.0
offset_bottom = 386.0
placeholder_text = "Ingrese contrasenia"

[node name="lbl_password" type="Label" parent="password_input"]
layout_mode = 0
offset_left = 758.0
offset_top = 307.0
offset_right = 870.0
offset_bottom = 342.0
text = "Password"

[node name="lbl_password_error" type="Label" parent="password_input/lbl_password"]
layout_mode = 0
offset_left = -3.0
offset_top = 94.0
offset_right = 315.0
offset_bottom = 117.0

[node name="loading" type="Sprite2D" parent="."]
visible = false
position = Vector2(919, 519)
texture = ExtResource("2_0hfqf")

[connection signal="pressed" from="btn_login" to="." method="_on_btn_login_pressed"]
